--- a/formulario.html
+++ b/formulario.html
@@ -10,13 +10,13 @@
     <h1>Formulário de Cadastro</h1>
     <form>
         <label for="nome">Nome</label>
-        <input type="text" placeholder="Seu nome"> 
+        <input id="nome" type="text" placeholder="Seu nome"> 
         <br />
         <label for="email">E-email</label>
-        <input  type="email" placeholder="email">
+        <input  id="email" type="email" placeholder="email">
         <br />
-        <label for="email">Senha</label>
-        <input type="password" placeholder="Senha">
+        <label for="senha">Senha</label>
+        <input  id="senha" type="password" placeholder="Senha">
         <br />
         <button type="submit">
             Cadastrar
